Bug 904934 - Remove mobilenetwork check. r=hsinyi, a=1.3+